# starfield-shader-injector

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserEnvVars.json  README.md  make-release.ps1  vcpkg.json
resources/: SFShaderInjector.ini
source/: CComPtr.h  CMakeLists.txt  CRHooks.cpp  CRHooks.h  D3DHooks.cpp  D3DHooks.h  D3DPipelineStateStream.cpp  D3DPipelineStateStream.h  D3DRootSignature.cpp  D3DRootSignature.h  D3DShaderReplacement.cpp  D3DShaderReplacement.h  DebuggingUtil.cpp  DebuggingUtil.h  Plugin.cpp  Plugin.h  ReShadeHelper.cpp  ReShadeHelper.h  dllmain.cpp  pch.h
source/Hooking/: Hooks.cpp  Hooks.h  Memory.cpp  Memory.h  Offsets.cpp  Offsets.h
source/RE/: CreationRenderer.cpp  CreationRenderer.h
vcpkg-ports/detours/: portfile.cmake
vcpkg-ports/reshade-api/: portfile.cmake  vcpkg.json
vcpkg-ports/reshade-imgui/: portfile.cmake  vcpkg.json
vcpkg-ports/sfse-common/: portfile.cmake  usage  vcpkg.json
